# polygons_group

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
data/: input.txt  output.txt
include/: point2d.h  polygon2d.h  segment2d.h
script/: buildLines.py  compile.sh  draw_polygons.py  viewLines.py
src/: .point2d.cpp.swp  buildLines.py  main.cpp  point2d.cpp  pointd2d.cpp  polygon2d.cpp  segment2d.cpp  test.cpp
src/data/: fig.txt
